# monarch-AI-OS

./: .gitignore  README.md  main.py  pyproject.toml  task_desk_structured.json  time_tracker_structured.json
Analytics/: daily_hours_engine.py  monthly_hours_engine.py  weekly_hours_engine.py
Automation/: daily_hours.json  weekly_hours.json
Client/: index.html  package-lock.json  package.json  vite.config.js
Client/src/: App.jsx  index.css
ClientMN/: index.html  package-lock.json  package.json  vite.config.js
ClientMN/src/: App.jsx
Components/: GSheet_TaskDes.py  GSheet_TimeTracker.py
JsonRes/: daily_hours.json  day_hours_structured.json  task_desk_structured.json  time_tracker_structured.json  week_hours_structured.json
MCP/: README.md  claude.md  get_daily_hours.py  get_monthly_hours.py  mcp_server.py
MCP/utils/: config.py  get_daily_hours.py  get_monthly_hours.py  get_tasks.py  get_time_tracker.py  (+1 more)
Server/: .dockerignore  .gitignore  Dockerfile  README.md  config_loader.py  main.py  pyproject.toml  requirements.txt  server.py
Server/Analytics/: daily_hours_engine.py  monthly_hours_engine.py  weekly_hours_engine.py
Server/Automation/: daily_hours.json  monthly_hours.json  weekly_hours.json
Server/Components/: GSheet_TaskDes.py  GSheet_TimeTracker.py
Server/JsonRes/: task_desk_structured.json  time_tracker_structured.json
Server/SchemaJson/Automation/: daily_hours.json  monthly_hours.json
Server/SchemaJson/JsonRes/: time_tracker_structured.json
Server/Test/: GSheet_DayHours.py  GSheet_WeekHours.py
Server/utils/: s3_utils.py
(+44 files in other folders)
