[project]
name = "porjectmn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.68",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.0",
    "google>=3.0.0",
    "google-api-python-client>=2.192.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "groq>=1.0.0",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "mangum>=0.21.0",
    "mcp[cli]>=1.26.0",
    "pandas>=3.0.1",
    "uvicorn>=0.41.0",
]
